--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <div>
         <h1> Appoint Software Type 1</h1>
-        <p> Calender</p><iframe src="//rohan12.appointy.com/?isGadget=1" width="760px" height="555px" scrolling="auto" frameborder="0" allowtransparency="true"></iframe>
-        <br><p> button </p><a href="http://rohan12.appointy.com/" target="_blank"><img src="http://appointy.com/Images/scheduleme.png" alt="" border="0" /></a>
+        <h3> Calender</h3><iframe src="//rohan12.appointy.com/?isGadget=1" width="760px" height="555px" scrolling="auto" frameborder="0" allowtransparency="true"></iframe>
+        <hr><br><h3> button </h3><a href="http://rohan12.appointy.com/" target="_blank"><img src="http://appointy.com/Images/scheduleme.png" alt="" border="0" /></a>
         <br><script type="text/javascript">
 var appointy = 'rohan12';
 var scheduleoHeight = '700';
@@ -25,9 +25,9 @@ var ScheduleMePosition = 'right';  // right, left
     <br>
     <div>
         <h1>Appoint Software Type 2</h1>
-        <p> Calender</p><iframe src="https://app.acuityscheduling.com/schedule.php?owner=14878058" width="100%" height="800" frameBorder="0"></iframe><script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
-       <br>
-        <p> button</p><a href="https://app.acuityscheduling.com/schedule.php?owner=14878058" target="_blank" class="acuity-embed-button" style="background: #5fb8b9; color: #fff; padding: 8px 12px; border: 0px; -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;-moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;border-radius: 4px; text-decoration: none; display: inline-block;">Schedule Appointment</a><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/14878058.css" id="acuity-button-styles" /><script src="https://embed.acuityscheduling.com/embed/button/14878058.js" async></script>
+        <h3> Calender</h3><iframe src="https://app.acuityscheduling.com/schedule.php?owner=14878058" width="100%" height="800" frameBorder="0"></iframe><script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
+       <hr><br>
+        <h3> button</h3><a href="https://app.acuityscheduling.com/schedule.php?owner=14878058" target="_blank" class="acuity-embed-button" style="background: #5fb8b9; color: #fff; padding: 8px 12px; border: 0px; -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;-moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;box-shadow: 0 -2px 0 rgba(0,0,0,0.15) inset;border-radius: 4px; text-decoration: none; display: inline-block;">Schedule Appointment</a><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/14878058.css" id="acuity-button-styles" /><script src="https://embed.acuityscheduling.com/embed/button/14878058.js" async></script>
     
     </div>
     
