--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ var ScheduleMePosition = 'right';  // right, left
     
     <br>
     <br>
+    <hr style="border: 2px solid black">
+    <br>
     <div>
         <h1>Appoint Software Type 2</h1>
         <h3> Calender</h3><iframe src="https://app.acuityscheduling.com/schedule.php?owner=14878058" width="100%" height="800" frameBorder="0"></iframe><script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
